// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Title /> > should render 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    style="--h1FontFamily: "Krana Fat", Trebuchet MS;--h1FontSize: 3.75rem;--h1FontWeight: 1000;--h1LineHeight: 1;"
  >
    Test Title
  </h1>
   
  <aside
    aria-label="Kirjoituksen Test Title meta-tiedot"
    data-astro-cid-k4jemuzu=""
    style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: "IBM Plex Mono", Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
  >
     
    <time
      data-astro-cid-k4jemuzu=""
      datetime="2026-01-01"
      style="font-size:1.875rem;line-height:2.25rem;font-family:"IBM Plex Sans", Trebuchet MS;font-weight:300;--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: "IBM Plex Mono", Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
    >
      01.01.2026
    </time>
     
    <ul
      data-astro-cid-k4jemuzu=""
      style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: "IBM Plex Mono", Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
    >
       
      <li
        data-astro-cid-k4jemuzu=""
        style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: "IBM Plex Mono", Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
      >
         
        <a
          data-astro-cid-k4jemuzu=""
          href="/fi/category/artificial-intelligence/"
          style="--colorsMoss: rgb(90, 94, 0);--definitionFontFamily: "IBM Plex Mono", Lucida Sans Typewriter;--definitionFontSize: 1rem;--definitionFontWeight: 500;--definitionLineHeight: 1.5rem;--definitionTextTransform: uppercase;--sizes0: 0px;--sizes05: 0.5rem;--sizes1: 1rem;"
        >
          #Tekoäly
        </a>
         
      </li>
       
    </ul>
     
  </aside>
   
</div>
`;

exports[`<Title /> > should render minimal 1`] = `
<div
  class="title-container"
  data-astro-cid-qsgiqu7o=""
  style="--colorsWhite: rgb(255, 255, 255);--contentPadding: 0.5rem;--sizes05: 0.5rem;--sizes1: 1rem;--sizes5: 5rem;--sizes375: 37.5rem;"
>
   
  <h1
    data-astro-cid-dqoe6t4j=""
    style="--h1FontFamily: "Krana Fat", Trebuchet MS;--h1FontSize: 3.75rem;--h1FontWeight: 1000;--h1LineHeight: 1;"
  >
    Test Title
  </h1>
    
</div>
`;
